# pugg

./: CMakeLists.txt  readme-dev.md  readme.md
examples/: CMakeLists.txt
examples/PangeaAnimals/: CMakeLists.txt  Cat.h  Dog.h  plugin.cpp
examples/PanthalassaAnimals/: CMakeLists.txt  Fish.h  Whale.h  plugin.cpp
examples/Zoo/: Animal.h  CMakeLists.txt  main.cpp
include/pugg/: driver.hpp  kernel.hpp  plugin.hpp
tools/: check_code_quality.sh  fix_format.sh
